# energy-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
src/: settings.py  urls.py
src/devices/: apps.py  models.py
src/devices/api/: schemas.py  views.py
src/devices/fixtures/: measurement_devices.json  measurements.json
src/devices/migrations/: 0001_initial.py
