[project]
name = "energy-service"
version = "0.1.0"
authors = [{ name = "Beatriz Uezu", email = "beatriz.uezu@gmail.com" }]
dependencies = ["django>=5.1.1", "django-ninja>=1.3.0"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "ruff>=0.5.6",
  "pre-commit>=3.8.0",
  "pdbr>=0.8.8",
  "pytest>=8.3.2",
]
virtual = true
lock-with-sources = true

[tool.ruff]
target-version = "py311"
indent-width = 4
line-length = 100

[tool.ruff.lint]
fixable = ["ALL"]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "W", # pycodestyle
  "I", # isort
]
extend-select = ["I"]
ignore = ["F401"]
unfixable = ["F401"]


[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "single"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test* *Tests"
addopts = "--pdbcls=pdbr:RichPdb -vv -x"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/energy_service"]
